--- a/index.html
+++ b/index.html
@@ -555,6 +555,7 @@
     <img src="images/Polina1.jpg" alt="Полина Телия - Шеф-редактор и AI-тренер">
 </div>
         </div>
+        </div>
     </section>
 
     <!-- About Section -->
