--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
                 <a href="#contact" class="btn">Обсудить проект</a>
             </div>
             <div class="hero-image">
-    <img src="images/Polina1.jpg" alt="Полина Телия - Шеф-редактор и AI-тренер">
+    <img src="image/Polina1.jpg" alt="Полина Телия - Шеф-редактор и AI-тренер">
 </div>
         </div>
         </div>
