--- a/index.html
+++ b/index.html
@@ -194,12 +194,12 @@
             box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
         }
         
-        .hero-image img {
+        /*.hero-image img {
             width: 100%;
             height: auto;
             display: block;
             transition: transform 0.5s ease;
-        }
+        }*/
         
         .hero-image:hover img {
             transform: scale(1.03);
@@ -543,20 +543,19 @@
     </header>
 
     <!-- Hero Section -->
-    <section class="hero">
-        <div class="container hero-container">
-            <div class="hero-content">
-                <h1>Полина Телия</h1>
-                <p>Шеф-редактор / AI-тренер</p>
-                <p>Помогаю командам развивать навыки, внедрять ИИ и создавать цифровые продукты, экономя до 30% бюджета на разработке и контенте.</p>
-                <a href="#contact" class="btn">Обсудить проект</a>
-            </div>
-            <div class="hero-image">
-    <img src="image/Polina1.jpg" alt="Полина Телия - Шеф-редактор и AI-тренер">
-</div>
+<section class="hero">
+    <div class="container hero-container">
+        <div class="hero-content">
+            <h1>Полина Телия</h1>
+            <p>Шеф-редактор / AI-тренер</p>
+            <p>Помогаю командам развивать навыки, внедрять ИИ и создавать цифровые продукты, экономя до 30% бюджета на разработке и контенте.</p>
+            <a href="#contact" class="btn">Обсудить проект</a>
         </div>
+        <div class="hero-image">
+            <img src="image/Polina1.jpg" alt="Полина Телия - Шеф-редактор и AI-тренер">
         </div>
-    </section>
+    </div>
+</section>
 
     <!-- About Section -->
     <section id="about" class="about">
