--- a/index.html
+++ b/index.html
@@ -522,43 +522,19 @@
     </style>
 </head>
 <body>
-    /* Header & Navigation */
-header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    background-color: var(--white);
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
-    z-index: 1000;
-    transition: all 0.3s ease;
-    padding: 15px 0;
-}
-
-.header-container {
-    display: flex;
-    justify-content: center; /* или flex-end для правого края */
-    align-items: center;
-    padding: 0;
-}
-
-nav ul {
-    display: flex;
-    list-style: none;
-    align-items: center;
-}
-
-nav li {
-    margin-left: 25px;
-}
-
-nav a {
-    text-decoration: none;
-    color: var(--text-dark);
-    font-weight: 500;
-    transition: color 0.3s ease;
-    font-size: 0.95rem;
-}
+    <header>
+    <div class="container header-container">
+        <nav>
+            <ul>
+                <li><a href="#about">Обо мне</a></li>
+                <li><a href="#skills">Экспертиза</a></li>
+                <li><a href="#cases">Кейсы</a></li>
+                <li><a href="#experience">Опыт</a></li>
+                <li><a href="#contact" class="btn nav-btn">Обсудить проект</a></li>
+            </ul>
+        </nav>
+    </div>
+</header>
 
     <!-- Hero Section -->
 <section class="hero">
