--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         
         .header-container {
             display: flex;
-            justify-content: space-between;
+            justify-content: flex-end;
             align-items: center;
             padding: 0;
         }
