--- a/index.html
+++ b/index.html
@@ -632,15 +632,15 @@
                     <div class="case-content">
                         <h3>Система онбординга авторов</h3>
                         <h4>Задача</h4>
-                        <p>Создать эффективную систему обучения новых авторов для крупного издательства.</p>
+                        <p>Автоматизировать и ускорить процесс подключения внештатных авторов, сократив нагрузку на редакторов.</p>
                         <h4>Моя роль / Действия</h4>
                         <ul>
-                            <li>Разработала программу обучения и методические материалы</li>
-                            <li>Внедрила систему проверки качества контента</li>
-                            <li>Создала процесс обратной связи и менторинга</li>
+                            <li>Разработала контент и организовала процесс съемок обучающих видео от лидеров команд</li>
+                            <li>Собрала с помощью вайб-кодинга интерактивный сайт-инструкцию</li>
+                            <li>Внедрила в него тестирование с автопроверкой</li>
                         </ul>
                         <h4>Результат</h4>
-                        <p class="result">Сокращение времени адаптации новых авторов на 40%</p>
+                        <p class="result">Сокращение времени адаптации новых авторов на 40%. Повышение репутации компании как лидера в EdTech</p>
                     </div>
                 </div>
                 <div class="case-card">
@@ -650,12 +650,12 @@
                     <div class="case-content">
                         <h3>Курс по промпт-инжинирингу</h3>
                         <h4>Задача</h4>
-                        <p>Разработать образовательный курс по использованию ИИ для команды контент-менеджеров.</p>
+                        <p>Создать практический курс для Сбер AI, который научит эффективно «общаться» с нейросетями для решения задач. Целевая аудитория ― ученики 9-11 классов и все, кто интересуется ИИ.</p>
                         <h4>Моя роль / Действия</h4>
                         <ul>
-                            <li>Создала программу и учебные материалы</li>
-                            <li>Провела обучение и практические сессии</li>
-                            <li>Разработала систему оценки эффективности</li>
+                            <li>Участвовала в разработке программы, структурировала материал</li>
+                            <li>Написала и отредактировала теоретическую часть и практические задания</li>
+                            <li>Обеспечила взимодействие исполнителей разных уровней в кросс-командном проекте. Курс выпустили без задержек</li>
                         </ul>
                         <h4>Результат</h4>
                         <p class="result">Курс запущен и получил оценку 4.8/5 от первых 500 пользователей</p>
