--- a/index.html
+++ b/index.html
@@ -650,12 +650,12 @@
                     <div class="case-content">
                         <h3>Курс по промпт-инжинирингу</h3>
                         <h4>Задача</h4>
-                        <p>Создать практический курс для Сбер AI, который научит эффективно «общаться» с нейросетями для решения задач. Целевая аудитория ― ученики 9-11 классов и все, кто интересуется ИИ.</p>
+                        <p>Создать практический курс для Сбер AI, который научит эффективно «общаться» с нейросетями для решения задач.</p>
                         <h4>Моя роль / Действия</h4>
                         <ul>
-                            <li>Участвовала в разработке программы, структурировала материал</li>
-                            <li>Написала и отредактировала теоретическую часть и практические задания</li>
-                            <li>Обеспечила взимодействие исполнителей разных уровней в кросс-командном проекте. Курс выпустили без задержек</li>
+                            <li>Участвовала в разработке программы</li>
+                            <li>Написала и отредактировала теоретическую часть и задания</li>
+                            <li>Обеспечила взаимодействие в кросс-командном проекте. Курс выпустили без задержек</li>
                         </ul>
                         <h4>Результат</h4>
                         <p class="result">Курс запущен и получил оценку 4.8/5 от первых 500 пользователей</p>
@@ -664,6 +664,48 @@
             </div>
         </div>
     </section>
+
+    <!-- ДОБАВЬТЕ ПОСЛЕ СУЩЕСТВУЮЩИХ КЕЙСОВ -->
+
+<!-- Кейс 3 -->
+<div class="case-card">
+    <div class="case-image">
+        Скриншот проекта
+    </div>
+    <div class="case-content">
+        <h3>Контент-стратегия для EdTech платформы</h3>
+        <h4>Задача</h4>
+        <p>Создать современные и качественные учебные материалы для школьников о навыках будущего.</p>
+        <h4>Моя роль / Действия</h4>
+        <ul>
+            <li>Разрабатывала и редактировала интерактивный курс с геймификацией по развитию у детей ключевых компетенций</li>
+            <li>Разрабатывала сценарии интерактивных заданий и информативных комиксов для Просвещения</li>
+            <li>Анализировала и редактировала контент для интерактивных симуляторов по функциональной грамотности</li>
+        </ul>
+        <h4>Результат</h4>
+        <p class="result">Увеличение вовлеченности пользователей в спецпроекте по функциональной грамотности на 45% за 3 месяца. Учебное пособие по искусственному интеллекту для Издательства «Просвещение» прошло все проверки на соответствие образовательным стандартам (ФГОС) и выпущено в печать. </p>
+    </div>
+</div>
+
+<!-- Кейс 4 -->
+<div class="case-card">
+    <div class="case-image">
+        Скриншот проекта
+    </div>
+    <div class="case-content">
+        <h3>Автоматизация контент-процессов</h3>
+        <h4>Задача</h4>
+        <p>Оптимизировать процессы создания и публикации контента в медиа-компании.</p>
+        <h4>Моя роль / Действия</h4>
+        <ul>
+            <li>Внедрила AI-инструменты для генерации идей и черновиков</li>
+            <li>Настроила автоматизированный workflow публикаций</li>
+            <li>Обучила команду работе с новыми инструментами</li>
+        </ul>
+        <h4>Результат</h4>
+        <p class="result">Сокращение времени на производство контента на 50%</p>
+    </div>
+</div>
 
     <!-- Experience Section -->
     <section id="experience" class="experience">
