--- a/index.html
+++ b/index.html
@@ -658,10 +658,10 @@
                     <ul>
                         <li>Разрабатывала и редактировала интерактивный курс с геймификацией по развитию у детей ключевых компетенций</li>
                         <li>Разрабатывала сценарии интерактивных заданий и информативных комиксов для Просвещения</li>
-                        <li>Анализировала и редактировала контент для интерактивных симуляторов по функциональной грамотности</li>
+                
                     </ul>
                     <h4>Результат</h4>
-                    <p class="result">Увеличение вовлеченности пользователей в спецпроекте по функциональной грамотности на 45% за 3 месяца. Учебное пособие по искусственному интеллекту для Издательства «Просвещение» прошло все проверки на соответствие образовательным стандартам (ФГОС) и выпущено в печать.</p>
+                    <p class="result">Увеличение вовлеченности пользователей в спецпроекте по функциональной грамотности на 45% за 3 месяца. Учебное пособие прошло проверку на соответствие ФГОС и выпущено в печать.</p>
                 </div>
             </div>
             
