--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@
                     Скриншот проекта
                 </div>
                 <div class="case-content">
-                    <h3>Контент-стратегия для EdTech платформы</h3>
+                    <h3>Образовательные продукты для школьников</h3>
                     <h4>Задача</h4>
                     <p>Создать современные и качественные учебные материалы для школьников о навыках будущего.</p>
                     <h4>Моя роль / Действия</h4>
@@ -676,9 +676,9 @@
                     <p>Создать практический курс для Сбер AI, который научит эффективно «общаться» с нейросетями для решения задач.</p>
                     <h4>Моя роль / Действия</h4>
                     <ul>
-                        <li>Участвовала в разработке программы</li>
+                        <li>Участвовала в разработке структуры курса, проработала геймификацию и логику прохождения</li>
                         <li>Написала и отредактировала теоретическую часть и задания</li>
-                        <li>Обеспечила взаимодействие в кросс-командном проекте. Курс выпустили без задержек</li>
+                        <li>Обеспечила взаимодействие исполнителей разных уровней и навыков в кросс-командном проекте</li>
                     </ul>
                     <h4>Результат</h4>
                     <p class="result">Курс запущен и получил оценку 4.8/5 от первых 500 пользователей</p>
@@ -693,17 +693,18 @@
                     Скриншот проекта
                 </div>
                 <div class="case-content">
-                    <h3>Автоматизация контент-процессов</h3>
+                    <h3>Запуск и развитие корпоративного медиа</h3>
                     <h4>Задача</h4>
-                    <p>Оптимизировать процессы создания и публикации контента в медиа-компании.</p>
+                    <p>Создать медиа-ресурс, регулярно выпускающий качественный контент в сжатые сроки.</p>
                     <h4>Моя роль / Действия</h4>
                     <ul>
+                        <li>Разработала редакционную политику и контент-стратегию</li>
                         <li>Внедрила AI-инструменты для генерации идей и черновиков</li>
-                        <li>Настроила автоматизированный workflow публикаций</li>
+                        <li>Проработала систему метрик, внедрила регулярную аналитику через ИИ</li>
                         <li>Обучила команду работе с новыми инструментами</li>
                     </ul>
                     <h4>Результат</h4>
-                    <p class="result">Сокращение времени на производство контента на 50%</p>
+                    <p class="result">32% сотрудников регулярно читали выпуски и давали обратную связь. Проект показал жизнеспособность и передан на дальнейшее развитие.</p>
                 </div>
             </div>
         </div> <!-- Закрывающий тег для .cases-grid -->
