--- a/index.html
+++ b/index.html
@@ -313,13 +313,17 @@
         }
         
         .case-image {
-            height: 200px;
-            background-color: var(--medium-gray);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: var(--text-light);
-        }
+    height: 200px;
+    background-color: var(--medium-gray);
+    overflow: hidden; /* Добавьте эту строку */
+}
+
+.case-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Обрезает изображение чтобы заполнить контейнер */
+    display: block;
+}
         
         .case-content {
             padding: 25px;
