--- a/index.html
+++ b/index.html
@@ -632,7 +632,7 @@
             <!-- Кейс 1 -->
             <div class="case-card">
                 <div class="case-image">
-                    Скриншот проекта
+                    <img src="https://89856254418p-star.github.io/Teliia-Polina_Expertise/image/Frame25.png" alt="Система онбординга авторов">
                 </div>
                 <div class="case-content">
                     <h3>Система онбординга авторов</h3>
@@ -652,7 +652,7 @@
 <!-- Кейс 2 -->
             <div class="case-card">
                 <div class="case-image">
-                    Скриншот проекта
+                    <img src="https://89856254418p-star.github.io/Teliia-Polina_Expertise/image/Frame22.png" alt="Система онбординга авторов">
                 </div>
                 <div class="case-content">
                     <h3>Образовательные продукты для школьников</h3>
@@ -672,7 +672,7 @@
             <!-- Кейс 3 -->
             <div class="case-card">
                 <div class="case-image">
-                    Скриншот проекта
+                    <img src="https://89856254418p-star.github.io/Teliia-Polina_Expertise/image/Frame24.png" alt="Система онбординга авторов">
                 </div>
                 <div class="case-content">
                     <h3>Курс по промпт-инжинирингу</h3>
@@ -694,7 +694,7 @@
             <!-- Кейс 4 -->
             <div class="case-card">
                 <div class="case-image">
-                    Скриншот проекта
+                    <img src="https://89856254418p-star.github.io/Teliia-Polina_Expertise/image/Frame23.png" alt="Система онбординга авторов">
                 </div>
                 <div class="case-content">
                     <h3>Запуск и развитие корпоративного медиа</h3>
