--- a/index.html
+++ b/index.html
@@ -312,17 +312,18 @@
             transform: translateY(-5px);
         }
         
-        .case-image {
-    height: 200px;
+       .case-image {
+    height: 400px;
     background-color: var(--medium-gray);
-    overflow: hidden; /* Добавьте эту строку */
+    overflow: hidden;
 }
 
 .case-image img {
     width: 100%;
     height: 100%;
-    object-fit: cover; /* Обрезает изображение чтобы заполнить контейнер */
+    object-fit: contain; /* Вместо cover - покажет всю картинку */
     display: block;
+    background-color: var(--light-gray); /* Фон если есть пустые области */
 }
         
         .case-content {
