--- a/index.html
+++ b/index.html
@@ -633,7 +633,7 @@
             <!-- Кейс 1 -->
             <div class="case-card">
                 <div class="case-image">
-                    <img src="https://89856254418p-star.github.io/Teliia-Polina_Expertise/image/Frame25.png" alt="Система онбординга авторов">
+                    <img src="https://89856254418p-star.github.io/Teliia-Polina_Expertise/image/Frame 25-2.png" alt="Система онбординга авторов">
                 </div>
                 <div class="case-content">
                     <h3>Система онбординга авторов</h3>
@@ -739,7 +739,7 @@
             
             <form class="contact-form" id="contact-form">
                 <div class="form-group">
-                    <label for="name">Имя</label>
+                    <label for="name">Имя, компания</label>
                     <input type="text" id="name" class="form-control" required>
                 </div>
                 <div class="form-group">
@@ -747,13 +747,13 @@
                     <input type="email" id="email" class="form-control" required>
                 </div>
                 <div class="form-group">
-                    <label for="message">Сообщение (необязательное)</label>
+                    <label for="message">Ваше сообщение (необязательное)</label>
                     <textarea id="message" class="form-control" rows="4"></textarea>
                 </div>
                 <button type="submit" class="btn">Отправить</button>
             </form>
             
-            <a href="mailto:example@email.com" class="email-link">Или напишите на почту: example@email.com</a>
+            <a href="mailto:polo4ka@yandex.ru" class="email-link">Или напишите на почту: polo4ka@yandex.ru</a>
         </div>
     </section>
 
@@ -761,7 +761,7 @@
     <footer>
         <div class="container footer-container">
             <div class="copyright">
-                &copy; 2023 Полина Телия
+                &copy; 2025 Полина Телия
             </div>
             <div class="social-links">
                 <a href="#">LinkedIn</a>
