--- a/index.html
+++ b/index.html
@@ -695,7 +695,7 @@
             <!-- Кейс 4 -->
             <div class="case-card">
                 <div class="case-image">
-                    <img src="https://89856254418p-star.github.io/Teliia-Polina_Expertise/image/Frame23.png" alt="Система онбординга авторов">
+                    <img src="https://89856254418p-star.github.io/Teliia-Polina_Expertise/image/22 1.png" alt="Система онбординга авторов">
                 </div>
                 <div class="case-content">
                     <h3>Запуск и развитие корпоративного медиа</h3>
