--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
     transition: transform 0.3s ease;
     display: flex;
     flex-direction: column;
-    height: 650px;
+    /* height: 650px; УДАЛИТЕ ЭТУ СТРОКУ */
 }
 
 .case-card:hover {
@@ -334,12 +334,14 @@
     flex-grow: 1;
     display: flex;
     flex-direction: column;
+    /* Добавьте чтобы контент не обрезался */
+    overflow: visible;
 }
 
 /* Заголовки кейсов - оставляем Playfair Display */
 .case-content h3 {
     margin-bottom: 15px;
-    font-family: 'Playfair Display', serif; /* Как все заголовки */
+    font-family: 'Playfair Display', serif;
     font-weight: 600;
     color: var(--primary-dark);
 }
@@ -348,13 +350,13 @@
     font-size: 1rem;
     margin-bottom: 10px;
     color: var(--accent-color);
-    font-family: 'Playfair Display', serif; /* Как все заголовки */
+    font-family: 'Playfair Display', serif;
     font-weight: 600;
 }
 
 /* Основной текст кейсов - делаем Inter как в описании задачи */
 .case-content p {
-    font-family: 'Inter', sans-serif; /* Один шрифт с описанием задачи */
+    font-family: 'Inter', sans-serif;
     font-weight: 400;
     line-height: 1.6;
     color: var(--text-light);
@@ -367,8 +369,8 @@
 }
 
 .case-content li {
-    margin-bottom: 5px;
-    font-family: 'Inter', sans-serif; /* Один шрифт с описанием задачи */
+    margin-bottom: 8px; /* Увеличим отступ между пунктами */
+    font-family: 'Inter', sans-serif;
     font-weight: 400;
     line-height: 1.6;
     color: var(--text-light);
@@ -378,8 +380,9 @@
 .result {
     font-weight: 600;
     color: var(--accent-color);
-    font-family: 'Inter', sans-serif; /* Один шрифт с описанием задачи */
+    font-family: 'Inter', sans-serif;
     line-height: 1.6;
+    margin-top: auto; /* Чтобы результат был внизу */
 }
         /* Experience Section */
         .experience {
