--- a/index.html
+++ b/index.html
@@ -794,7 +794,7 @@
                 &copy; 2025 Полина Телия
             </div>
             <div class="social-links">
-                <a href="#">LinkedIn</a>
+                <a href="#">WhatsApp</a>
                 <a href="#">Telegram</a>
             </div>
         </div>
