--- a/index.html
+++ b/index.html
@@ -784,7 +784,7 @@
             <button type="submit" class="btn">Отправить</button>
         </form>
         
-        <a href="mailto:polo4ka@yandex.ru" class="email-link">Или напишите в телеграм: @Polina_Teli</a>
+        <a href="mailto:polo4ka@yandex.ru" class="email-link">Или напишите напрямую на почту: polo4ka@yandex.ru</a>
     </div>
 </section>
 
